--- a/Ex01_261300.ipynb
+++ b/Ex01_261300.ipynb
@@ -205,13 +205,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 47,
       "metadata": {
-        "id": "vJl90QuiVrVw"
+        "id": "vJl90QuiVrVw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57fe931e-b1a2-4fcb-a37b-ac5b1e3d5359"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array a:\n",
+            " [[1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]]\n",
+            "\n",
+            "Tipo:  int16\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "a = np.ones((5,3), 'int16')\n",
+        "a.dtype\n",
+        "print(\"Array a:\\n\",a)\n",
+        "\n",
+        "print(\"\\nTipo: \",a.dtype)"
       ]
     },
     {
@@ -225,13 +248,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 51,
       "metadata": {
-        "id": "eotdHqZFWG6n"
+        "id": "eotdHqZFWG6n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5bd74631-c4b3-4dd7-bbef-e5798dbafe54"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array a:\n",
+            " [[1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]]\n",
+            "\n",
+            "\n",
+            "Array b:\n",
+            " [[1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 0 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Para não modificar o array inicial, foi utilizada a função numpy.copy => 'Return an array copy of the given object'\n",
+        "b = np.copy(a)\n",
+        "b[2,1]=0\n",
+        "print(\"Array a:\\n\",a)\n",
+        "print('\\n')\n",
+        "print(\"Array b:\\n\",b)"
       ]
     },
     {
@@ -245,13 +298,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 52,
       "metadata": {
-        "id": "a3e-ElKkXc-p"
+        "id": "a3e-ElKkXc-p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1db2bba-5da5-476c-93df-ea2282abd0df"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array c:\n",
+            " [1 1 0 1 1]\n",
+            "\n",
+            "\n",
+            "Array b:\n",
+            " [[1 2 1]\n",
+            " [1 2 1]\n",
+            " [1 2 1]\n",
+            " [1 2 1]\n",
+            " [1 2 1]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Foi feita uma cópia da 2a coluna de b para criação do array c para verificar que estava alterando a coluna certa e após foram alterados os elemntos da 2a coluna em b para '2'\n",
+        "\n",
+        "c=np.copy(b[:,1])\n",
+        "b[:,1]=2\n",
+        "print(\"Array c:\\n\",c)\n",
+        "print('\\n')\n",
+        "print(\"Array b:\\n\",b)"
       ]
     },
     {
@@ -275,13 +355,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 63,
       "metadata": {
-        "id": "QI2HC8SUbRAm"
+        "id": "QI2HC8SUbRAm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "220512c5-f564-40db-f76d-f3b1150a758d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array d:\n",
+            " [  0   5  10  15  20  25  30  35  40  45  50  55  60  65  70  75  80  85\n",
+            "  90  95 100]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# As funções arange e linspace geram um vetor sequencial\n",
+        "d=np.arange(0,101,5)\n",
+        "print(\"Array d:\\n\",d)"
       ]
     },
     {
@@ -295,13 +391,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 65,
       "metadata": {
-        "id": "KV4aP8eAbr4_"
+        "id": "KV4aP8eAbr4_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ea72f3de-e031-4a98-f43e-72533462e440"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  0,   5,  10],\n",
+              "       [ 15,  20,  25],\n",
+              "       [ 30,  35,  40],\n",
+              "       [ 45,  50,  55],\n",
+              "       [ 60,  65,  70],\n",
+              "       [ 75,  80,  85],\n",
+              "       [ 90,  95, 100]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Seu código aqui\n",
+        "d.reshape(7,3)"
       ]
     },
     {
@@ -1182,6 +1300,13 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "o-W-I1kiT-8G",
+        "k_cZ4ps0Z3rT",
+        "D6fksLE0tsiX",
+        "zmQO8JGOtsiY",
+        "gU9455qnUi4x"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
