--- a/Ex01_261300.ipynb
+++ b/Ex01_261300.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "id": "6naaiHFUtsiI"
       },
@@ -50,20 +50,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {
         "id": "zg6jlodTtsiJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa032b44-970d-446f-c961-e42ba6ea9d88"
+        "outputId": "a3a11d89-2899-49d0-bbc9-38f30bd9367a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ],
@@ -93,13 +93,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lyw-0E6yUi4v",
-        "outputId": "866c60b8-da2f-443c-e848-a0afc09079e1"
+        "outputId": "76a47f4f-e3d7-4f80-d287-413802f95722"
       },
       "outputs": [
         {
@@ -126,25 +126,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 376
+          "height": 0
         },
         "id": "_c7eUOHlUi4x",
-        "outputId": "5c88118c-3b6b-4f35-9f34-b63fbcc1bb56"
+        "outputId": "6ac4f120-dfdf-4c8c-c1af-15439617952d"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7c35cc0b77c0>"
+              "<matplotlib.colorbar.Colorbar at 0x7f27fc226800>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -205,13 +205,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 21,
       "metadata": {
         "id": "vJl90QuiVrVw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57fe931e-b1a2-4fcb-a37b-ac5b1e3d5359"
+        "outputId": "577d4de8-b4b8-4845-d997-182f10cfdafc"
       },
       "outputs": [
         {
@@ -248,13 +248,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 22,
       "metadata": {
         "id": "eotdHqZFWG6n",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5bd74631-c4b3-4dd7-bbef-e5798dbafe54"
+        "outputId": "d1f780bb-100d-41c4-ff2b-f4427ec20197"
       },
       "outputs": [
         {
@@ -298,13 +298,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 23,
       "metadata": {
         "id": "a3e-ElKkXc-p",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1db2bba-5da5-476c-93df-ea2282abd0df"
+        "outputId": "387a40c3-d21d-4a61-91bc-7f83c3c4ebc3"
       },
       "outputs": [
         {
@@ -355,13 +355,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 24,
       "metadata": {
         "id": "QI2HC8SUbRAm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "220512c5-f564-40db-f76d-f3b1150a758d"
+        "outputId": "08c9b09d-c44e-4325-a418-88a5d141dfb6"
       },
       "outputs": [
         {
@@ -391,35 +391,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 25,
       "metadata": {
         "id": "KV4aP8eAbr4_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea72f3de-e031-4a98-f43e-72533462e440"
+        "outputId": "70639385-20c5-487a-c6af-a218fd4e9e5c"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[  0,   5,  10],\n",
-              "       [ 15,  20,  25],\n",
-              "       [ 30,  35,  40],\n",
-              "       [ 45,  50,  55],\n",
-              "       [ 60,  65,  70],\n",
-              "       [ 75,  80,  85],\n",
-              "       [ 90,  95, 100]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array d:\n",
+            " [[  0   5  10]\n",
+            " [ 15  20  25]\n",
+            " [ 30  35  40]\n",
+            " [ 45  50  55]\n",
+            " [ 60  65  70]\n",
+            " [ 75  80  85]\n",
+            " [ 90  95 100]]\n"
+          ]
         }
       ],
       "source": [
-        "# Seu código aqui\n",
-        "d.reshape(7,3)"
+        "# numpy.reshape gives a new shape to an array without changing its data.\n",
+        "\n",
+        "d=d.reshape(7,3)\n",
+        "print(\"Array d:\\n\",d)"
       ]
     },
     {
@@ -433,13 +433,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 28,
       "metadata": {
-        "id": "m3Jo40jvekOk"
+        "id": "m3Jo40jvekOk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1fc80f5c-515e-496a-e833-1feea2bd6587"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array d invertido:\n",
+            " [[100  95  90]\n",
+            " [ 85  80  75]\n",
+            " [ 70  65  60]\n",
+            " [ 55  50  45]\n",
+            " [ 40  35  30]\n",
+            " [ 25  20  15]\n",
+            " [ 10   5   0]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Foi utilizado o fatiamento com índices invertidos nas linhas e nas colunas, utilizando todos os elementos\n",
+        "\n",
+        "d_invert=d[::-1,::-1]\n",
+        "print(\"Array d invertido:\\n\",d_invert)"
       ]
     },
     {
@@ -453,13 +475,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 29,
       "metadata": {
-        "id": "GLxbKKcaiJlB"
+        "id": "GLxbKKcaiJlB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1634ea9-8aa9-43b2-97be-a627a6cbda65"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "elementos da 4ª à 5ª linhas e da 2ª à 3ª colunas:\n",
+            " [[50 45]\n",
+            " [35 30]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Foi utilizado o fatiamento nas linhas e nas colunas para mostrar só os elementos solicitados\n",
+        "\n",
+        "print(\"elementos da 4ª à 5ª linhas e da 2ª à 3ª colunas:\\n\",d_invert[3:5,1:3])"
       ]
     },
     {
@@ -473,13 +511,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 32,
       "metadata": {
-        "id": "OU9A0yi2tsiO"
+        "id": "OU9A0yi2tsiO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e0e8742-79fe-43c7-9461-ee49b4a2eb00"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array d invertido com uma dimensão:\n",
+            " [100  95  90  85  80  75  70  65  60  55  50  45  40  35  30  25  20  15\n",
+            "  10   5   0]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Foi utilizado o numpy.reshape com o formato para apenas uma linha com o número de elementos total\n",
+        "\n",
+        "d_1d=d_invert.reshape(21,)\n",
+        "print(\"Array d invertido com uma dimensão:\\n\",d_1d)"
       ]
     },
     {
@@ -509,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ULw_XlJrlccS"
       },
@@ -529,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "AF-u7y9tmyaS"
       },
@@ -549,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "aKWnIetUoPP-"
       },
@@ -588,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "qX8f43wIy9iq"
       },
@@ -617,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -676,7 +731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "DXLxgPHp580i"
       },
@@ -696,7 +751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "W47Rdz6k20Rk"
       },
@@ -728,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "g_INUD2FUi4z"
       },
@@ -748,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "LLIaMUvq7AFv"
       },
@@ -768,7 +823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "gU3PvfW76WPF"
       },
@@ -801,7 +856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "vjeJFtr4n72E"
       },
