--- a/Ex01_261300.ipynb
+++ b/Ex01_261300.ipynb
@@ -564,13 +564,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
-        "id": "ULw_XlJrlccS"
+        "id": "ULw_XlJrlccS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89cc0968-39c9-4f6e-9611-389b96f70aec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Array e:\n",
+            " [[ 0  1  2  3  4  5  6]\n",
+            " [ 7  8  9 10 11 12 13]\n",
+            " [14 15 16 17 18 19 20]\n",
+            " [21 22 23 24 25 26 27]\n",
+            " [28 29 30 31 32 33 34]]\n",
+            "\n",
+            "\n",
+            "Shape:\n",
+            " (5, 7)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Foram concatenadas as funções np.arange e np.reshape para criação do array solicitado\n",
+        "\n",
+        "e = np.arange(0,35,1).reshape(5,7)\n",
+        "print ('Array e:\\n', e)\n",
+        "print('\\n')\n",
+        "print ('Shape:\\n', e.shape)"
       ]
     },
     {
@@ -584,13 +610,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
-        "id": "AF-u7y9tmyaS"
+        "id": "AF-u7y9tmyaS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ccf64546-8734-49e5-da6e-41c24470ba35"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Elementos do array e que são maiores que 20:\n",
+            " [21 22 23 24 25 26 27 28 29 30 31 32 33 34]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Seu código aqui\n",
+        "print('Elementos do array e que são maiores que 20:\\n',e[e>20] )"
       ]
     },
     {
@@ -604,13 +644,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 112,
       "metadata": {
-        "id": "aKWnIetUoPP-"
+        "id": "aKWnIetUoPP-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5aa6d480-f58d-4492-f32e-f8f15572e218"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Soma das colunas:\n",
+            " [ 70  75  80  85  90  95 100]\n",
+            "\n",
+            "Colunas com soma par:\n",
+            " [ True False  True False  True False  True]\n",
+            "\n",
+            "New array:\n",
+            " [[ 0  2  4  6]\n",
+            " [ 7  9 11 13]\n",
+            " [14 16 18 20]\n",
+            " [21 23 25 27]\n",
+            " [28 30 32 34]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# Somando os elementos das colunas e tirando o resto da divisão pra verificar se é par ou ímpar\n",
+        "\n",
+        "e_sum = np.sum(e, axis=0) #soma das colunas\n",
+        "print('Soma das colunas:\\n', e_sum)\n",
+        "\n",
+        "e_sum_par = e_sum%2==0 #resto da divisão por 2 igual zero para saber se é par\n",
+        "\n",
+        "print('\\nColunas com soma par:\\n',e_sum_par)\n",
+        "\n",
+        "new_array=[]\n",
+        "\n",
+        "for i in range(len(e_res)):\n",
+        "  aux=[]\n",
+        "  for j in range(len(e_res[0])):\n",
+        "    if e_sum_par[j]: aux.append(e_res[i,j])\n",
+        "  new_array.append(aux)\n",
+        "\n",
+        "print('\\nNew array:\\n', np.array(new_array))"
       ]
     },
     {
@@ -1358,6 +1438,7 @@
       "collapsed_sections": [
         "o-W-I1kiT-8G",
         "k_cZ4ps0Z3rT",
+        "B7A683XvZ-Dc",
         "D6fksLE0tsiX",
         "zmQO8JGOtsiY",
         "gU9455qnUi4x"
