--- a/Ex01_261300.ipynb
+++ b/Ex01_261300.ipynb
@@ -723,13 +723,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 127,
       "metadata": {
-        "id": "qX8f43wIy9iq"
+        "id": "qX8f43wIy9iq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40272403-e7f3-461a-97c9-5f921cabec14"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matriz X:\n",
+            " [[0.    1.    2.    3.   ]\n",
+            " [1.    1.414 2.236 3.162]\n",
+            " [2.    2.236 2.828 3.606]\n",
+            " [3.    3.162 3.606 4.243]\n",
+            " [4.    4.123 4.472 5.   ]]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Seu código aqui"
+        "# A Distância Euclidiana é definida como a soma da raiz quadrada da diferença entre x e y em suas respectivas dimensões.\n",
+        "\n",
+        "def mat_distancia(m,n):\n",
+        "  rows = np.arange(m)\n",
+        "  cols = np.arange(n)\n",
+        "  r, c = np.meshgrid(rows, cols, indexing='ij')\n",
+        "  # print('r = \\n', r)\n",
+        "  # print('c = \\n', c)\n",
+        "\n",
+        "  mat_X = np.sqrt(r**2+c**2)\n",
+        "  return (mat_X)\n",
+        "\n",
+        "X = mat_distancia(5,4)\n",
+        "\n",
+        "np.set_printoptions(suppress=True, precision=3)\n",
+        "print('matriz X:\\n', X)\n"
       ]
     },
     {
@@ -1439,6 +1471,8 @@
         "o-W-I1kiT-8G",
         "k_cZ4ps0Z3rT",
         "B7A683XvZ-Dc",
+        "WNAmIzl8lJnB",
+        "GxpElKJsxgNF",
         "D6fksLE0tsiX",
         "zmQO8JGOtsiY",
         "gU9455qnUi4x"
