--- a/Ex02_261300.ipynb
+++ b/Ex02_261300.ipynb
@@ -212,6 +212,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### *Pelo histograma podemos aferir que as imagens de dia tem se acumulam mais para o lado do branco (255) e as imagens da noite tendem a se acumular mais próximo do valor preto (0).*"
+      ],
+      "metadata": {
+        "id": "bRgB6YPzAd_P"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tAFHjKObtFJa"
       },
@@ -371,6 +380,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *Colocando em níveis de cinza, parece ter feito maior diferença na foto de dia quando analisamos o formato histograma.*"
+      ],
+      "metadata": {
+        "id": "d5QynzreBMMz"
+      }
     },
     {
       "cell_type": "markdown",
@@ -550,6 +568,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *Para o caso das duas imagens (dia e noite), a média já mostra uma grande diferença, desta forma posso supor que os atributos podem ser de grande auxílio para classificação de imagens.*"
+      ],
+      "metadata": {
+        "id": "R1gljEgNCqwG"
+      }
     },
     {
       "cell_type": "markdown",
